--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -63,6 +63,10 @@
   background-color: rgba(108, 140, 255, 1);
 }
 
+.search-btn-hidden {
+  display: none;
+}
+
 .search-input {
   display: block;
   height: 40px;
@@ -106,6 +110,7 @@
   margin-top: 32px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 32px;
 }
 
 .gallery-stats {
